--- a/conceptarithmetic.html
+++ b/conceptarithmetic.html
@@ -75,7 +75,7 @@ $(function() {
 <h2 class="groupheader">Concept definition</h2>
 <div class="fragment"><div class="line"><span class="keyword">template</span>&lt;<span class="keyword">typename</span> T&gt;</div>
 <div class="line"><span class="keyword">concept </span><a class="code hl_concept" href="conceptarithmetic.html">arithmetic</a> =  std::integral&lt;T&gt; or std::floating_point&lt;T&gt;</div>
-<div class="ttc" id="aconceptarithmetic_html"><div class="ttname"><a href="conceptarithmetic.html">arithmetic</a></div><div class="ttdef"><b>Definition</b> main.cpp:8</div></div>
+<div class="ttc" id="aconceptarithmetic_html"><div class="ttname"><a href="conceptarithmetic.html">arithmetic</a></div><div class="ttdef"><b>Definition</b> MyFrame.h:24</div></div>
 </div><!-- fragment --></div><!-- contents -->
 <!-- start footer part -->
 <hr class="footer"/><address class="footer"><small>
