deploy: a56823fe59ec6df0a1f4fc72c5864b712b88b7f3

--- a/classFlightStatusEvent.html
+++ b/classFlightStatusEvent.html
@@ -84,7 +84,7 @@ Inheritance diagram for FlightStatusEvent:</div>
  <div class="center">
   <img src="classFlightStatusEvent.png" usemap="#FlightStatusEvent_map" alt=""/>
   <map id="FlightStatusEvent_map" name="FlightStatusEvent_map">
-<area href="classMyFlightEvent.html" alt="MyFlightEvent" shape="rect" coords="0,56,109,80"/>
+<area href="classwxFlightEvent.html" alt="wxFlightEvent" shape="rect" coords="0,56,109,80"/>
   </map>
 </div></div>
 <table class="memberdecls">
