deploy: 4a5199d42bf86f8866a3c0428bed903366b96f81

--- a/classObserver.html
+++ b/classObserver.html
@@ -86,7 +86,7 @@ Inheritance diagram for Observer&lt; T &gt;:</div>
 <area href="classSeparateThreadObserver.html" alt="SeparateThreadObserver&lt; FlightStatusEvent &gt;" shape="rect" coords="144,56,422,80"/>
 <area href="classSeparateThreadObserver.html" alt="SeparateThreadObserver&lt; T &gt;" shape="rect" coords="432,56,710,80"/>
 <area href="classDatabaseClient.html" alt="DatabaseClient" shape="rect" coords="0,112,278,136"/>
-<area href="classUIClient.html" alt="UIClient" shape="rect" coords="288,112,566,136"/>
+<area href="classDummyStatsCollection.html" alt="DummyStatsCollection" shape="rect" coords="288,112,566,136"/>
   </map>
 </div></div>
 <table class="memberdecls">
