deploy: 3891775994946bdef00f8f76f1a9b698d1e978ab

--- a/classADSBlolRESTClient.html
+++ b/classADSBlolRESTClient.html
@@ -129,7 +129,7 @@ Static Public Member Functions</h2></td></tr>
 </div><div class="memdoc">
 <p>Constructor which takes list of icao24 identifier strings and only returns updates on those flights </p><dl class="params"><dt>Parameters</dt><dd>
   <table class="params">
-    <tr><td class="paramname">targets</td><td>icao24 ids for all aircraft that should be monitored </td></tr>
+    <tr><td class="paramname">input_targets</td><td>icao24 ids for all aircraft that should be monitored </td></tr>
   </table>
   </dd>
 </dl>
