--- a/index.html
+++ b/index.html
@@ -132,18 +132,30 @@ Run</h2>
 <div class="line">cmake --build .</div>
 <div class="line">./flight_track</div>
 </div><!-- fragment --><p>This populates flights within 250 nautical miles radius of Columbia University. The below interface appears upon running. It details the information of flight which can be identified by its unique ID and call sign.</p>
-<p><img src="img1.png" alt="Flight Track UI" title="Flight Track UI" class="inline"/></p>
-<p>The application updates the flight information every 5 seconds as seen below.</p>
-<p><img src="img2.png" alt="Flight Track UI - New updates in Green" title="Flight Track UI - New updates in Green" class="inline"/></p>
-<ul>
+<div class="image">
+<img src="img1.png" alt=""/>
+<div class="caption">
+Flight Track UI</div></div>
+    <p>The application updates the flight information every 5 seconds as seen below.</p>
+<div class="image">
+<img src="img2.png" alt=""/>
+<div class="caption">
+Flight Track UI - New updates in Green</div></div>
+    <ul>
 <li>As the application updates, new events are added in bright green towards the bottom.</li>
 <li>If an existing flight is updated, the color will change from green to another color.</li>
 </ul>
 <p>Every refresh, updates and/or adds up to 1000 flight events:</p>
-<p><img src="img3.png" alt="Flight Track Stats" title="Flight Track Stats" class="inline"/></p>
-<p>It also populates the SQLite database on the backend with the records in the flights table:</p>
-<p><img src="img3.png" alt="Flight Track Database Update" title="Flight Track Database Update" class="inline"/></p>
-<h1><a class="anchor" id="autotoc_md8"></a>
+<div class="image">
+<img src="img3.png" alt=""/>
+<div class="caption">
+Flight Track Stats</div></div>
+    <p>It also populates the SQLite database on the backend with the records in the flights table:</p>
+<div class="image">
+<img src="img3.png" alt=""/>
+<div class="caption">
+Flight Track Database Update</div></div>
+    <h1><a class="anchor" id="autotoc_md8"></a>
 Release Plan/Deliverables</h1>
 <h2><a class="anchor" id="autotoc_md9"></a>
 Release 0.8</h2>
