deploy: 67e256bd912c43c6ad2b1aff152cbacd5d362aa9

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ Overview</h1>
 Producer component</h2>
 <ul>
 <li>Fetches, stores, and publishes flight data from REST API</li>
-<li>The data source is OpenSky REST API: <a href="https://openskynetwork.github.io/opensky-api">https://openskynetwork.github.io/opensky-api</a></li>
+<li>The data source is ADSB.lol API: (<a href="https://api.adsb.lol/docs">https://api.adsb.lol/docs</a>)</li>
 <li>Wraps REST API with C++ native classes and functionality</li>
 <li>Periodically polls for changes and publishes the data collected to an event/message queue.</li>
 </ul>
